apps/skein_compiler/test/skein/conformance/negative/nondeterminism_in_record_requires_capability.skein
-- expect: E0012
-- #261: an effect nested inside a record literal is still capability-checked —
-- store.put(User { id: uuid.new() }) requires `capability uuid`.
module NondeterminismInRecord {
  capability store.table("users", User)

  type User { id: Uuid @primary }

  fn save() -> Result[User, StoreError] {
    store.users.put(User { id: uuid.new() })
  }
}
